--- a/KidsApplication/Base.lproj/Main.storyboard
+++ b/KidsApplication/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Kids Application-->
         <scene sceneID="tne-QT-ifu">
@@ -76,29 +81,86 @@
             </objects>
             <point key="canvasLocation" x="239" y="125"/>
         </scene>
-        <!--View Controller-->
+        <!--Colors View Controller-->
         <scene sceneID="29d-hk-fmu">
             <objects>
-                <viewController id="92U-HO-b8D" sceneMemberID="viewController">
+                <viewController id="92U-HO-b8D" customClass="ColorsViewController" customModule="KidsApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="43I-AP-nCy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="colors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FE0-hJ-m4X">
-                                <rect key="frame" x="166" y="161" width="130" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X4d-SB-2Rd">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="100" id="kLO-CO-Das" customClass="CustomTableViewCell" customModule="KidsApplication" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kLO-CO-Das" id="vls-by-fLg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="beR-Qg-1CY">
+                                                    <rect key="frame" x="10" y="5" width="355" height="89.5"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Red" translatesAutoresizingMaskIntoConstraints="NO" id="zuL-3D-8OX">
+                                                            <rect key="frame" x="0.0" y="15" width="60" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="60" id="I2c-dt-ig6"/>
+                                                                <constraint firstAttribute="width" constant="60" id="zmW-nL-GmD"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGy-oJ-dZF">
+                                                            <rect key="frame" x="70" y="10" width="275" height="69.5"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="0.96999999999999997" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="dGy-oJ-dZF" firstAttribute="leading" secondItem="zuL-3D-8OX" secondAttribute="trailing" constant="10" id="8GD-Zz-Y3p"/>
+                                                        <constraint firstAttribute="bottom" secondItem="dGy-oJ-dZF" secondAttribute="bottom" constant="10" id="8uu-mN-dC3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="dGy-oJ-dZF" secondAttribute="trailing" constant="10" id="BmR-rw-kMy"/>
+                                                        <constraint firstItem="zuL-3D-8OX" firstAttribute="centerY" secondItem="beR-Qg-1CY" secondAttribute="centerY" id="Rob-Ze-6Mb"/>
+                                                        <constraint firstItem="zuL-3D-8OX" firstAttribute="leading" secondItem="beR-Qg-1CY" secondAttribute="leading" id="hh5-pO-V3r"/>
+                                                        <constraint firstItem="dGy-oJ-dZF" firstAttribute="top" secondItem="beR-Qg-1CY" secondAttribute="top" constant="10" id="sNK-Da-Dnc"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="beR-Qg-1CY" firstAttribute="leading" secondItem="vls-by-fLg" secondAttribute="leading" constant="10" id="AVu-vQ-JX7"/>
+                                                <constraint firstAttribute="bottom" secondItem="beR-Qg-1CY" secondAttribute="bottom" constant="5" id="SGW-Yw-pZw"/>
+                                                <constraint firstAttribute="trailing" secondItem="beR-Qg-1CY" secondAttribute="trailing" constant="10" id="aX4-qC-DHL"/>
+                                                <constraint firstItem="beR-Qg-1CY" firstAttribute="top" secondItem="vls-by-fLg" secondAttribute="top" constant="5" id="i0K-CR-NsZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellView" destination="beR-Qg-1CY" id="jZs-qx-fqY"/>
+                                            <outlet property="colorImage" destination="zuL-3D-8OX" id="VG5-Ox-964"/>
+                                            <outlet property="colorLbl" destination="dGy-oJ-dZF" id="M5D-zg-krd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aam-dO-lkk" firstAttribute="trailing" secondItem="X4d-SB-2Rd" secondAttribute="trailing" id="ZxU-Ao-phq"/>
+                            <constraint firstItem="X4d-SB-2Rd" firstAttribute="top" secondItem="aam-dO-lkk" secondAttribute="top" id="hIU-Sp-epr"/>
+                            <constraint firstItem="X4d-SB-2Rd" firstAttribute="leading" secondItem="aam-dO-lkk" secondAttribute="leading" id="zdl-p9-IMQ"/>
+                            <constraint firstItem="aam-dO-lkk" firstAttribute="bottom" secondItem="X4d-SB-2Rd" secondAttribute="bottom" id="zfd-6i-79L"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aam-dO-lkk"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="X4d-SB-2Rd" id="IsX-0Y-sNB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Cn-8z-Uo8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913" y="-544"/>
+            <point key="canvasLocation" x="912.79999999999995" y="-545.57721139430294"/>
         </scene>
         <!--Story View Controller-->
         <scene sceneID="wtw-QC-Hbq">
@@ -257,6 +319,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Red" width="480" height="480"/>
         <image name="alphabet1" width="415" height="650"/>
         <image name="app_alphabet" width="418" height="426"/>
         <image name="app_colors" width="414" height="435"/>
@@ -265,7 +328,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="lBG-HG-bmM"/>
-        <segue reference="cr2-4q-apI"/>
+        <segue reference="XrB-aU-QiF"/>
         <segue reference="vLV-Np-YnA"/>
     </inferredMetricsTieBreakers>
 </document>
